--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,7 @@ dependencies {
     //Material UI
     api 'com.google.android.material:material:1.2.0-beta01'
 
-    //GPS
+    //Google Play Service - Location API
     implementation "com.google.android.gms:play-services-location:17.0.0"
 
     //Room
